fix: 다리 건너기 결과 추가 저장 위치(인덱스) 오류 수정